objects/Notification__e.object
<CustomObject>
    <fields>
        <fullName>ErrorStatus__c</fullName>
        <label>Error Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>message__c</fullName>
        <label>message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>recordId__c</fullName>
        <label>recordId</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Notification</label>
    <pluralLabel>Notifications</pluralLabel>
</CustomObject>